appsink, appsrc: skip set_callbacks APIs for introspection

https://bugzilla.gnome.org/show_bug.cgi?id=678301